Fix annoying scrollbar jump/flicker on feed!
When you click 'view more', page moves from not having scrollbar, to
have scrollbar.

--- a/modules/app/App.css
+++ b/modules/app/App.css
@@ -1,3 +1,7 @@
+html {
+    margin-left: calc(100vw - 100%)
+}
+
 :root {
   --gray: hsl(197, 10%, 45%);
   --middle-gray: hsl(240, 6%, 92%);
